--- a/src/components/calendar/styles-calendar.css
+++ b/src/components/calendar/styles-calendar.css
@@ -1,6 +1,6 @@
 :root {
   --fc-neutral-bg-color: rgba(149, 52, 244, 0.2);
-  --fc-page-bg-color: theme("colors.base");
+  --fc-page-bg-color: theme("colors.pagebg");
   --fc-border-color: theme("colors.inactive/0.5");
   --fc-list-event-hover-bg-color: theme("colors.primary.hover");
   --fc-event-bg-color: theme("colors.brand.violet");
